force-app/main/default/objects/custom_create301__c/custom_create301__c.object-meta.xml
<CustomObject>
    <label>Custom created object301</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects301</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>