force-app/main/default/objects/custom_create301__c/fields/custom_create_301field565__c.field-meta.xml
<CustomField>
    <fullName>custom_create_301field565__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 301field565</label>
    <type>Checkbox</type>
</CustomField>